# platform-backend

./: .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: add-to-project.yml  ci-image-push.yml  ci-mvn-check.yml  contract-gate.yml  etl-worker-image.yml  etl-worker.yml
api-gateway/src/main/resources/: application-k8s.yml  application.properties
api-gateway/src/test/resources/: application.properties
audio-gateway-service/: README.md  pom.xml
audio-gateway-service/docs/: contract-v1.md  pr-gw-01c-line-106-execution-report.md
audio-gateway-service/src/main/resources/: application-k8s.yml  application.yml
auth-service/: pom.xml
auth-service/src/test/resources/: application-wiremock-it.yml
backend/openfga/: model.fga  render_model_json.py
backend/openfga/tests/: report_group_authz.fga.yaml
common-export/: pom.xml
docs/adr/: 0006-report-contract-gate.md  0008-schema-truth-integration.md  0014-audit-module-gating.md  0015-report-execution-adapter.md
docs/plans/: 2026-05-reporting-phase-2-program-1-report-contract-gate-spec.md  2026-05-reporting-platform-hardening.md  2026-05-user-impersonation-v1-spec.md
docs/spikes/: 2026-05-impersonation-token-exchange-spike.md
endpoint-admin-service/: Dockerfile  pom.xml
endpoint-admin-service/src/main/resources/: application-integration.yml  application-k8s.yml  application-local.properties  application.yml
endpoint-admin-service/src/test/resources/: application-test.yml
etl-worker/: Dockerfile  README.md  pyproject.toml
etl-worker/etl_worker/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  contracts.py  db.py  retry.py  runner.py  schema_service_client.py
etl-worker/tests/: test_checkpoint.py  test_cli.py  test_cli_run.py  test_config.py  test_db.py  test_retry.py  test_runner.py  test_schema_service_client.py
notification-orchestrator/: Dockerfile  pom.xml
notification-orchestrator/src/main/resources/: application.yml
notification-orchestrator/src/test/resources/: application-test.yml
openfga/: model.fga
permission-service/src/test/resources/: application-impersonation-it.yml
report-service/: Dockerfile  pom.xml
report-service/src/main/resources/: application-k8s.yml  application.yml
report-service/src/main/resources/contract/: authz-reference-debt.yaml  deferred-stub-rules.yaml  report-definition.schema.json  tenant-column-allowlist.json
schema-service/src/main/resources/: application-snapshot-builder.yml  application.yml
user-service/src/main/resources/: application.properties
(+1284 files in other folders)
